--- a/src/pages/MissionShare/missionshare.module.css
+++ b/src/pages/MissionShare/missionshare.module.css
@@ -3,7 +3,7 @@
   min-height: 100vh;
   background: #f3f3f3;
   position: relative;
-  padding-bottom: 140px; /* footer와 겹치지 않게 */
+  padding-bottom: 140px; /* 하단 여백 확보 */
 }
 .captureArea {
   width: 900px;
